<resources>
    <string name="app_name">Quiz App</string>
    <string name="personal"><b>Personal Details</b></string>
    <string name="names">Name</string>
    <string name="emails">Email</string>
    <string name="startQuiz"><b>Start Quiz</b></string>

    // Question numbers
    <string name="q1"><u>Question 1:</u></string>
    <string name="q2"><u>Question 2:</u></string>
    <string name="q3"><u>Question 3:</u></string>
    <string name="q4"><u>Question 4:</u></string>
    <string name="q5"><u>Question 5:</u></string>

    // Questions Summary

    <string name="q1q">Which Company developed Android?</string>
    <string name="q2q">What is Google well know for?</string>
    <string name="q3q">What does AI stands for?</string>
    <string name="q4q">How many fingers does a human hand has?</string>
    <string name="q5q">True or False. Google is owned by Apple?</string>

    // Answers to choose from

    <string name="q1_1">Oracle</string>
    <string name="q1_2">Google</string>

    <string name="q2_1">Cycling</string>
    <string name="q2_2">Search</string>

    <string name="q3_1">Artificial Intelligence</string>
    <string name="q3_2">Study</string>

    <string name="q4_1">5</string>
    <string name="q4_2">2</string>

    <string name="q5_1">True</string>
    <string name="q5_2">False</string>

    <string name="Answer">Solution</string>
    <string name="submit">Submit</string>
    <string name="summaryResults">Results Summary</string>
    <string name="summary">Results</string>

</resources>
